fix modal and overflow x bug

--- a/src/component/Modal/Modal.module.css
+++ b/src/component/Modal/Modal.module.css
@@ -6,6 +6,7 @@
   border-radius: 20px;
   width: 80vw;
   min-height: 40vh;
+  max-height: 80vh;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -14,6 +15,8 @@
   z-index: 3;
   padding: 5% 10%;
   margin: 0 5%;
+  border: 2px solid white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   animation: zoomOut 300ms
 }
 
