--- a/src/component/UI/Card/Card.module.css
+++ b/src/component/UI/Card/Card.module.css
@@ -4,7 +4,7 @@
   border: 2px solid transparent;
   border-radius: 20px;
   height: fit-content;
-  min-width: 70vw;
+  width: 70vw;
   min-height: 60vh;
   background-color: rgb(0, 0, 0, 0.9);
   margin: 0% 4% 4%;
